--- a/src/components/input/Input.module.css
+++ b/src/components/input/Input.module.css
@@ -1,4 +1,5 @@
 .input {
+    appearance: none;
     height: 3rem;
     font-size: 1.5rem;
     border: none;
