--- a/src/components/searchbar/Searchbar.module.css
+++ b/src/components/searchbar/Searchbar.module.css
@@ -1,4 +1,5 @@
 .searchbar {
+    appearance: none;
     height: 3rem;
     font-size: 1.5rem;
     border: none;
